--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,9 +1,10 @@
 server {
 
-  listen 80;
+  listen 8000;
 
-  location /hello/ {
-    proxy_pass http://0.0.0.0:8080;
+  location / {
+    proxy_pass http://0.0.0.0:8000;
   }
+
 
 }
